--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,10 @@
     </aside>
   </div>
 
-  <footer class="pageFooter"></footer>
+  <footer class="pageFooter">
+    <div></div>
+    <div id="globalTimer" class="timer" title="reset"></div>
+  </footer>
 
   <script src='https://unpkg.com/@croquet/croquet'></script>
   <script src='https://codepen.io/croquet/pen/vYYyNed.js'></script>
