--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
         </section>
 
         <footer>
-          <div id="message"></div>
+          <div id="messages"></div>
 
           <div class="action">
             <button id="enqueueMe" class="button">Quiero hablar ✋</button>
