--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="https://codepen.io/croquet/pen/vYYyNed.css" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style/main.css" />
   </head>
   <body>
     <header class="pageHeader"></header>
 
     <div class="pageContent">
-      <main class="container">
+      <main class="mainSection">
         <section>
           <div class="currentSpeakerContainer">
             <div id="currentSpeaker" class="speakerRow">
