--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,10 @@
                 </div>
               </div>
 
-              <div id="speakerTimer" class="timer" title="reset"></div>
+              <div id="speakerTimer" class="timer" title="reset">
+                <span class="time"></span>
+                <span class="restartTimer">🟣</span>
+              </div>
             </div>
           </div>
 
@@ -76,7 +79,10 @@
       >
         📝
       </button>
-      <div id="globalTimer" class="timer" title="reset"></div>
+      <div id="globalTimer" class="timer" title="reset">
+        <span class="time"></span>
+        <span class="restartTimer">🟣</span>
+      </div>
     </footer>
 
     <script src="https://unpkg.com/@croquet/croquet"></script>
