--- a/src/index.html
+++ b/src/index.html
@@ -96,9 +96,7 @@
 
           <div class="title">Feedback recibido</div>
 
-          <ol id="notificationsList">
-            <li>Good boy</li>
-          </ol>
+          <ol id="notificationsList"></ol>
         </div>
       </main>
 
