--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
     <title>Enqueue App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;1,600&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="https://codepen.io/croquet/pen/vYYyNed.css" />
     <link rel="stylesheet" href="./style/main.css" />
   </head>
   <body>
     <header class="pageHeader">
-      <div class="pageTitle"></div>
+      <div id="topic" class="pageTitle" contenteditable="true">Topic:</div>
       <button
         id="notificationsBell"
         class="button notificationsBell shakingBell"
