intervention name standarization

--- a/src/index.html
+++ b/src/index.html
@@ -48,8 +48,8 @@
                 </button>
 
                 <button
-                  id="jumpInConversation"
-                  class="button jumpInConversation action"
+                  id="interveneConversation"
+                  class="button interveneConversation action"
                 >
                   ✋ me meto
                 </button>
