Modals visibility stanrdarization

--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
           </div>
         </footer>
 
-        <div id="feedbackModal" class="modal feedbackModal">
+        <div id="feedbackModal" class="modal feedbackModal hidden">
           <header>
             <button class="button icon close">x</button>
           </header>
@@ -121,7 +121,10 @@
         </div>
       </main>
 
-      <aside id="sharedNotesModal" class="modal undocked sharedNotesModal">
+      <aside
+        id="sharedNotesModal"
+        class="modal undocked sharedNotesModal hidden"
+      >
         <header>
           <button class="button icon close">x</button>
         </header>
@@ -141,7 +144,10 @@
         </div>
       </aside>
 
-      <aside id="notificationsModal" class="modal undocked notificationsModal">
+      <aside
+        id="notificationsModal"
+        class="modal undocked notificationsModal hidden"
+      >
         <header>
           <button class="button icon close">x</button>
         </header>
