mobile css optimizations

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
                   ✋ me meto
                 </button>
 
-                <div class="spacer" style="width: 50px"></div>
+                <div class="spacer"></div>
 
                 <div class="reactions">
                   <button id="like" class="button action reaction">
@@ -113,7 +113,11 @@
           <form>
             <textarea id="feedbackInput" placeholder="..."></textarea>
 
-            <button id="submitFeedback" type="submit" class="button send">
+            <button
+              id="submitFeedback"
+              type="submit"
+              class="button medium send"
+            >
               Enviar
             </button>
           </form>
