Feedback UX improvements

--- a/src/index.html
+++ b/src/index.html
@@ -158,6 +158,8 @@
         <div class="title">Feedback recibido</div>
 
         <ol id="notificationsList"></ol>
+
+        <div class="empty">Aun no tenes feedback</div>
       </aside>
     </div>
 
